syntax = "proto3";

package proto;

option go_package = "./proto";

// Mail service definition
service MailService {
  // Send email notification
  rpc SendMail(MailRequest) returns (MailResponse);
}

// Email request message
message MailRequest {
  string recipient = 1;
  string subject = 2;
  string body = 3;
}

// Email response message
message MailResponse {
  bool success = 1;
  string message = 2;
}
